--- a/cv.tex
+++ b/cv.tex
@@ -1,9 +1,9 @@
 %%%%%%%%%%%%%%%%% PREAMBLE %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %Change the font size of your document - 10pt, 12.1pt, etc.
-\documentclass[letterpaper,11pt,oneside]{article}
+\documentclass[letterpaper,10pt,oneside]{article}
 \usepackage[utf8]{inputenc}
 \usepackage{setspace}
-\usepackage{hyperref}
+\usepackage[hidelinks]{hyperref}
 
 \usepackage{graphicx}
 \graphicspath{ {images/}} %upload your signature to this file
@@ -11,8 +11,8 @@
 \usepackage[left=1in, right=1in, bottom=1.25in, top=1.25in]{geometry}
 
 %Skype information - include your Skype name for a link to add you on Skype
-\newcommand*{\Skype}{\href{skype:e.h.campbell?add}{e.h.campbell}} 
-\newcommand{\Absender}[1][\normalsize]{\Skype} 
+% \newcommand*{\Skype}{\href{skype:e.h.campbell?add}{e.h.campbell}} 
+% \newcommand{\Absender}[1][\normalsize]{\Skype} 
 
 %Changes the page numbers - {arabic}=arabic numerals, {gobble}=no page numbers, {roman}=Roman numerals
 \pagenumbering{gobble}
@@ -34,9 +34,9 @@
 \begin{center}
 \begin{tabular}{l l}
  Cornell University    & \hspace{1in} \href{mailto:ehc86@cornell.edu}{ehc86@cornell.edu} \\
- PhD Student, Department of Computer Science    & \hspace{1in}  \href{www.ericthewry.github.io}{www.ericthewry.github.io}   \\
- Gates Hall            & \hspace{1in} Skype: \Absender  \\
- Ithaca, NY\hspace{.75em}14853, U.S.A. & \hspace{1in} Phone: +1 (909) 343-9392 \\
+ PhD Candidate, Department of Computer Science    & \hspace{1in}  \href{ericthewry.github.io}{www.ericthewry.github.io}   \\
+ Gates Hall            & \\
+ Ithaca, NY\hspace{.75em}14853, U.S.A. \\
 \end{tabular}
 \end{center}
 
@@ -49,100 +49,131 @@
   \Large{Education} 
     & \textbf{Cornell University} \\
   
-    & Ph.D. in Computer Science, Expected May 2022 \\
+    & Ph.D. in Computer Science, Expected May 2023 \\
 
   
-    & M.Sc. in Computer Science, Expected May 2019 \\
+    & M.Sc. in Computer Science, December 2020 \\
   
 
-    & Concentration in Programming Languages \\
+    & \textbf{Research Interests}: Network Verification, Program Synthesis, Semantics \\
     & \\
 
 
     & \textbf{Pomona College} \\
 
-    & B.A. in Computer Science, Graduated May 2017 \\
+    & B.A. in Computer Science, May 2017 \\
 
   
-    & B.A. in Mathematics, Graduated May 2017 \\
+    & B.A. in Mathematics, May 2017 \\
   
 
     & Concentration in Programming Languages \\
     & \\
 
 
-    & \textbf{International School of Amsterdam} \\
+    % & \textbf{International School of Amsterdam} \\
 
-    & International Baccalaureate, Graduated May 2013 \\
+    % & International Baccalaureate, Graduated May 2013 \\
 
-    & Concentration in Mathematics \\
+    % & Concentration in Mathematics \\
+
+    \Large{Selected}
+       & \textbf{Avenir: Managing Data Plane Heterogeneity via Control Plane Synthesis}\\
+   \Large{Publications}
+       & Eric Hayden Campbell, Bill Hallahan, Priya Srikumar, Carmelo Cascone, Jed Liu, \\ & Vignesh Ramamurthy, Hossein Hojjat, Robert Soul\'{e}, Ruzica Piskac,  and  Nate Foster\\
+            & \textit{To Appear at NSDI 2021} \\
+
+            &\\
+
+    & \textbf{Epistemic Semantics in Guarded String Models}\\
+    & Eric Hayden Campbell, Mats Rooth \\
+    & \textit{To Appear at SCiL 2021} \\
+
+            & \\
+            
+    & \textbf{How to Avoid Making a Billion-Dollar Mistake:}\\
+     & \textbf{Type-Safe Data Plane Programming with SafeP4} \\
+    & Matthias Eicholtz, Eric Hayden Campbell, Nate Foster, \\ &Guido Salvaneschi, Mira Mezini \\
+                     & \textit{ECOOP}, July 2019 \\
+% \end{tabular}
+ % & \\
+% \noindent\begin{tabular}{@{} l l}
+            
+    % & \textbf{Kleene Algebra Modulo Theories} \\
+    % & Ryan Beckett, Eric Hayden Campbell, and Michael Greenberg \\
+    % & \textit{In Review, TOPLAS}\\
+ 
     & \\
-  \Large{Publications} 
-    & \textit{Kleene Algebra Modulo Theories} \\
-    & Ryan Beckett, Eric Campbell, and Michael Greenberg \\
-    & \textit{POPL}, January 2019
 
-    \hfill [IN SUBMISSION]
- \\
+    & \textbf{Infiniteness and Linear Temporal Logic} \\
+    & Eric Hayden Campbell, advised by Michael Greenberg \\
+    & \textit{Undergraduate Thesis at Pomona College}, May 2017\\
+
     & \\
 
-    & \textit{Infiniteness and Linear Temporal Logic} \\
-    & Eric Campbell, advised by Michael Greenberg \\
-    & \textit{Pomona College}, May 2017
+ %    & \textbf{Constructing Integer Matrices with Integer Eigenvalues} \\
+ %    & Christopher Towse and Eric Hayden Campbell \\
+ %    & \textit{The Mathematical Scientist, UK}, June 2016
+ % \\
+% \end{tabular}
 
-    \hfill [Undergraduate Thesis]
- \\
-    & \\
+% \begin{tabular}{@{} l l }
+ % \Large{Research}
+ %     & \textbf{Cornell-Princeton Network Programming Initiative}\\
+ %     & PhD Student Researcher\\
+ %     & \textbf{Databases Group, Pomona College} \\ 
+ %     & Research Assistant \\
+ %     & Project: Fast Subgraph Isomorphism in Temporal Networks  \\
+ %     & \\ \\
+ \Large{Industry}
+       & \textbf{Fujitsu Laboratories of America} \\
+       & Research Intern, Inference for Legacy Networks \\
+       & \textit{Sunnyvale, CA}. May 2018 - Aug 2018 \\
+       & \\
+       & \textbf{Originate, Inc} \\
+       & Software Engineering Intern, Web Development \\
+       & \textit{San Francisco, CA}. May 2015 - Aug 2015 \\
+       & \\
+       & \textbf{Gladly, Inc} \\
+       & Software Engineering Intern, Web Development \\
+            & \textit{Palo Alto, CA}. May 2014 - Aug 2014 \\ \\
+ \Large{Awards} 
+            & \textit{NSF Graduate Research Fellowship}, 2019. \\
+            & \textit{Cornell Teaching Excellence Award}, 2018.
 
-    & \textit{Constructing Integer Matrices with Integer Eigenvalues} \\
-    & Christopher Towse and Eric Campbell \\
-    & \textit{The Mathematical Scientist, UK}, June 2016
- \\
-    & \\
 \end{tabular}
 
 \begin{tabular}{@{} l l }
- \Large{Research}
-     & \textbf{Cornell-Princeton Network Programming Initiative}\\
-     & PhD Student Researcher\\
-     & Project: Flexible Data Models for Net\textsc{KAT}\\ \\
-     & \textbf{Databases Group, Pomona College} \\ 
-     & Research Assistant \\
-     & Project: Fast Subgraph Isomorphism in Temporal Networks  \\
-     & \\ \\
- \Large{Industry}
-     & \textbf{Fujitsu Laboratories of America} \\
-     & Research Intern \\
-     & \textit{Sunnyvale, CA}. May 2018 - Aug 2018 \\
-     & \\
-     & \textbf{Originate, Inc} \\
-     & Software Engineering Intern \\
-     & \textit{San Francisco, CA}. May 2015 - Aug 2015 \\
-     & \\
-     & \textbf{Gladly, Inc} \\
-     & Software Engineering Intern \\
-     & \textit{Palo Alto, CA}. May 2014 - Aug 2014 \\ \\
-\end{tabular}
-
-\begin{tabular}{@{} l l}
+            
+  \Large{Outreach}
+       & \textbf{4H Career Explorations Conference} \\
+       & Workshop Designer \& Leader, \emph{Networking and Security}, 2018 \\
+       & \\    
+       & \textbf{Expand Your Horizons Conference} \\
+       & Workshop Leader, \emph{Googling With Paper Airplanes}, 2017 - 2019 \\
+       & \\
+       & \textbf{Originate, Inc} \\
+       & Counselor, \emph{How to Build A Webpage}, 2015 \\
+       & \\
+ 
   \Large{Teaching}
-  & \textbf{Computer Science Department, Cornell University} \\
-
-  & TA, Object Oriented Programming and Data Structures, Spring 2018 \\
+       & \textbf{Computer Science Department, Cornell University} \\
   
-  & TA, Object Oriented Programming and Data Structures, Fall 2017 \\
-  &\\
+       & TA, Object Oriented Programming and Data Structures, Spring 2018 \\
   
-  & \textbf{Computer Science Department, Pomona College} \\ 
+       & TA, Object Oriented Programming and Data Structures, Fall 2017 \\
+       &\\
   
-  & TA, Databases Systems, Spring 2017 \\
-
-  & TA, Programming Languages, Fall 2016 \\
+       & \textbf{Computer Science Department, Pomona College} \\ 
   
-  & Head TA, Intro to CS, Spring 2016 \\
+       & TA, Databases Systems, Spring 2017 \\
   
-  & TA, Intro to CS, Fall 2015 \\
-
+       & TA, Programming Languages, Fall 2016 \\
+  
+       & Head TA, Intro to CS, Spring 2016 \\
+  
+       & TA, Intro to CS, Fall 2015 \\
+  
 
 \end{tabular}
 \end{document}
