--- a/resume.tex
+++ b/resume.tex
@@ -134,16 +134,14 @@ Computability \& Logic %% \\
 \section{Skills}
 \subsection{Programming}
 \location{Over 5000 lines:}
-Haskell  \textbullet{} C++ \textbullet{} Coq \textbullet{} Java \textbullet{} Python \textbullet{} Ruby on Rails \textbullet{} \LaTeX \\ 
+OCaml \textbullet SMTLIB \textbullet Haskell \textbullet{} Coq \textbullet{} Java \textbullet{} Python \textbullet{} Ruby on Rails \textbullet{} \LaTeX \\ 
 \location{Over 1000 lines:}
-OCaml \textbullet{} R \textbullet{} SQL \textbullet{} Java \textbullet{} bash \\
-\location{Familiar:}
-Elm \textbullet{} C  \textbullet{} HTML/CSS \textbullet{} OCaml
+R \textbullet{} SQL \textbullet{} Java \textbullet{} bash \\
 \sectionsep
 
-\subsection{Foreign Language}
-Professional French \textbullet{} Survival Dutch
-\sectionsep
+% \subsection{Foreign Language}
+% Professional French \textbullet{} Survival Dutch
+% \sectionsep
 
 %% \subsection{Other}
 %% Guitar \textbullet{} Voice \textbullet{} Espresso \\
@@ -186,18 +184,43 @@ Professional French \textbullet{} Survival Dutch
 \end{tightemize}
 \sectionsep
 
-\runsubsection{Gladly,Inc}
-\descript{| Software Engineering Intern }
-\location{May 2014 – Aug 2014 | Palo Alto, CA}
-\begin{tightemize}
-\item Worked on the Tab for a Cause team in JQuery and Python to redesign the front-end implementation of the website. Improved user downloads by 40\%.
-\item Developed front-end widgets for the browser extension.\end{tightemize}
+% \runsubsection{Gladly,Inc}
+% \descript{| Software Engineering Intern }
+% \location{May 2014 – Aug 2014 | Palo Alto, CA}
+% \begin{tightemize}
+% \item Improved user downloads by 40\% by redesinging the website
+%   front-end.
+% \item Developed front-end widgets for the browser extension.\end{tightemize}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     PUBLICATIONS
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Selected Publications}
+
+
+\runsubsection{Avenir: Managing Data Plane Heterogeneity via Control Plane Synthesis}
+\descript{Eric Hayden Campbell, William T. Hallahan, Priya Srikumar, Carmelo Cascone, Jed Liu, Vignesh Ramamurthy, Hossein Hojjat, Ruzica Piskac, Robert Soulé, J. Nathan Foster}
+
+
+\location{NSDI|April 2020}
+
+
+Employ program synthesis to translate abstract switch operations into target switch operations
+\sectionsep
+
+
+
+\runsubsection{Epistemic Semantics in Guarded String Models}
+\descript{Eric Hayden Campbell, Mats Rooth}
+
+
+\location{SCiL|February 2020}
+
+
+Extend Kleene Algebra with Tests to model epistemic semantics of modal verbs in natural English
+\sectionsep
+
 
 
 \runsubsection{How to Avoid Making a Billion-Dollar Mistake: Type-Safe Data Plane Programming with SafeP4}
@@ -212,23 +235,11 @@ Develop a Type System for P4 that prohibits references to invalid headers. Surve
 
 
 
-\runsubsection{Injecting Finiteness to Prove Finite Linear Temporal Logic Complete}
-\descript{Eric Campbell, Michael Greenberg}
-
-
-\location{In Progress}
-
-
-Present Sound and Complete axioms for Finite-Trace Linear Temporal Logic (LTLf)
-\sectionsep
-
-
-
 \runsubsection{Kleene Algebra Modulo Theories}
 \descript{Ryan Beckett, Eric Campbell, and Michael Greenberg}
 
 
-\location{In Progress}
+\location{In Submission}
 
 
 Generate Soundness proofs, Completeness proofs, and Decision procedures for KAs plus a Sound, Complete and Decidable, client theory.
@@ -256,13 +267,13 @@ Developed a construction algorithm for Integer Matrices with Integer Eigenvalues
 %     PROJECTS
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{Projects}
+% \section{Projects}
 
-\runsubsection{Databases @ Pomona College}
-\descript{| Research Assistant}
-\location{Jan 2016 – Aug 2016| Claremont, CA}
-Worked with \textbf{\href{http://www.cs.pomona.edu/~mwu/files/bio.htm}{Professor Melanie Wu}} on the development of \textbf{QuickTSI}, a fast query system for finding (partial) subgraph isomorphisms on temporal graphs.
-\sectionsep
+% \runsubsection{Databases @ Pomona College}
+% \descript{| Research Assistant}
+% \location{Jan 2016 – Aug 2016| Claremont, CA}
+% Worked with \textbf{\href{http://www.cs.pomona.edu/~mwu/files/bio.htm}{Professor Melanie Wu}} on the development of \textbf{QuickTSI}, a fast query system for finding (partial) subgraph isomorphisms on temporal graphs.
+% \sectionsep
 
 %% \runsubsection{\href{http://mathswipe.com}{MathSwipe}}
 %% \descript{| Technical Lead}
