--- a/my-site/news/2020-12-01-epik.markdown
+++ b/my-site/news/2020-12-01-epik.markdown
@@ -1,3 +1,3 @@
 ---
-descr: My linguistics work with Mats Rooth on Epistemic extensions to KAT (Epik) was accepted to SCiL 2020!
+descr: My linguistics work with Mats Rooth on Epistemic extensions to ᴋᴀᴛ (Epiᴋᴀᴛ) was accepted to SCiL 2020
 ---
