really fix link

--- a/my-site/news/2021-05-03-simons.md
+++ b/my-site/news/2021-05-03-simons.md
@@ -1,3 +1,3 @@
 ---
-descr: My invited talk on control plane synthesis at the Simons Institute is live (<a href="https://simons.berkeley.edu/workshops/schedule/14784">watch it here</a>)
+descr: My invited talk on control plane synthesis at the Simons Institute is live (<a href="https://simons.berkeley.edu/talks/tbd-323">watch it here</a>)
 ---
