--- a/resume.tex
+++ b/resume.tex
@@ -199,6 +199,18 @@ R \textbullet{} SQL \textbullet{} Java \textbullet{} bash \\
 \section{Selected Publications}
 
 
+\runsubsection{Dependently-Typed Data Plane Programming}
+\descript{Matthias Eichholtz, Eric Hayden Campbell, Matthias Krebs, Nate Foster,  Mira Mezini}
+
+
+\location{POPL|January 2022}
+
+
+Develop a dependent refinement type system for P4 with a liquid-style Z3 backend to prohibit undefined behavior
+\sectionsep
+
+
+
 \runsubsection{Avenir: Managing Data Plane Heterogeneity via Control Plane Synthesis}
 \descript{Eric Hayden Campbell, William T. Hallahan, Priya Srikumar, Carmelo Cascone, Jed Liu, Vignesh Ramamurthy, Hossein Hojjat, Ruzica Piskac, Robert Soulé, J. Nathan Foster}
 
