--- a/my-site/papers/2022-01-19-pi4.md
+++ b/my-site/papers/2022-01-19-pi4.md
@@ -3,6 +3,7 @@ title: "Dependently-Typed Data Plane Programming"
 authors: Matthias Eichholtz, Eric Hayden Campbell, Matthias Krebs, Nate Foster,  Mira Mezini
 venue: POPL
 month: January 2022 
+pdf: "pdfs/pi4.pdf"
 descr: "Develop a dependent refinement type system for P4 with a liquid-style Z3 backend to prohibit undefined behavior"
 --- 
 
