--- a/my-site/papers/2022-01-19-pi4.md
+++ b/my-site/papers/2022-01-19-pi4.md
@@ -1,6 +1,6 @@
 ---
 title: "Dependently-Typed Data Plane Programming"
-authors: Matthias Eichholtz, Eric Hayden Campbell, Matthias Krebs, Nate Foster,  Mira Mezini
+authors: Matthias Eichholz, Eric Hayden Campbell, Matthias Krebs, Nate Foster,  Mira Mezini
 venue: POPL
 month: January 2022 
 pdf: "pdfs/pi4.pdf"
