--- a/resume.tex
+++ b/resume.tex
@@ -200,7 +200,7 @@ R \textbullet{} SQL \textbullet{} Java \textbullet{} bash \\
 
 
 \runsubsection{Dependently-Typed Data Plane Programming}
-\descript{Matthias Eichholtz, Eric Hayden Campbell, Matthias Krebs, Nate Foster,  Mira Mezini}
+\descript{Matthias Eichholz, Eric Hayden Campbell, Matthias Krebs, Nate Foster,  Mira Mezini}
 
 
 \location{POPL|January 2022}
@@ -236,7 +236,7 @@ Extend Kleene Algebra with Tests to model epistemic semantics of modal verbs in 
 
 
 \runsubsection{How to Avoid Making a Billion-Dollar Mistake: Type-Safe Data Plane Programming with SafeP4}
-\descript{Matthias Eicholtz, Eric Campbell, Nate Foster, Guido Salvaneschi, Mira Mezini}
+\descript{Matthias Eichholz, Eric Campbell, Nate Foster, Guido Salvaneschi, Mira Mezini}
 
 
 \location{ECOOP|July 2019}
