--- a/my-site/cv.tex
+++ b/my-site/cv.tex
@@ -127,7 +127,7 @@
 
   & \textbf{Kleene Algebra Modulo Theories} \\
   & Michael Greenberg, Ryan Beckett, and Eric Hayden Campbell \\
-  & \textit{In Review, PLDI 2022} \\
+  & \textit{Conditionally Accepted, PLDI 2022} \\
   & \textit{arXiv:1707.02894, Sept 2021} \\
   &\\
 
@@ -144,6 +144,8 @@
 
   \Large{Invited Talks}
   & \textbf{Avenir: Managing Data Plane Diversity with Control Plane Synthesis}: \\
+      % & \tabitem \textit{Tech Talk}. Intel. May 2022. \\
+      & \tabitem \textit{Tech Talk}. Intel. March 2022. \\
       & \tabitem \textit{Computer Aided Verification}. P4 Verification Workshop. July 2021.\\
       & \tabitem \textit{Simons Institute}. Synthesis of Models and Systems. May 2021\\
       & \tabitem \textit{Networked Systems Design \& Implementation}. April 2021\\
