--- a/my-site/posts/2019-07-07-4H-workshop.md
+++ b/my-site/posts/2019-07-07-4H-workshop.md
@@ -80,7 +80,8 @@ minutes!
 
 The kicker is that they used _realistic networking strategies_ to
 solve the problem.
-#### Approaches
+
+#### Student Approaches
 
 The most common approach that students took was to send a note that
 said something like 
