--- a/resume.tex
+++ b/resume.tex
@@ -199,6 +199,18 @@ R \textbullet{} SQL \textbullet{} Java \textbullet{} bash \\
 \section{Selected Publications}
 
 
+\runsubsection{Kleene Algebra Modulo Theories}
+\descript{Michael Greenberg, Ryan Beckett, and Eric Hayden Campbell}
+
+
+\location{Conditionally Accepted to PLDI|June 2022}
+
+
+Generate Soundness proofs, Completeness proofs, and Decision procedures for KAs plus a Sound, Complete and Decidable, client theory.
+\sectionsep
+
+
+
 \runsubsection{Dependently-Typed Data Plane Programming}
 \descript{Matthias Eichholz, Eric Hayden Campbell, Matthias Krebs, Nate Foster,  Mira Mezini}
 
@@ -243,18 +255,6 @@ Extend Kleene Algebra with Tests to model epistemic semantics of modal verbs in 
 
 
 Develop a Type System for P4 that prohibits references to invalid headers. Surveys open source programs to identify real-world bugs that our type system prevents
-\sectionsep
-
-
-
-\runsubsection{Kleene Algebra Modulo Theories}
-\descript{Ryan Beckett, Eric Campbell, and Michael Greenberg}
-
-
-\location{In Submission}
-
-
-Generate Soundness proofs, Completeness proofs, and Decision procedures for KAs plus a Sound, Complete and Decidable, client theory.
 \sectionsep
 
 
