--- a/my-site/papers/2022-06-20-kmt.markdown
+++ b/my-site/papers/2022-06-20-kmt.markdown
@@ -2,7 +2,8 @@
 title: Kleene Algebra Modulo Theories
 authors: Michael Greenberg, Ryan Beckett, and Eric Hayden Campbell
 month: June 2022
-venue: Conditionally Accepted to PLDI
+venue: PLDI
+pdf:https://arxiv.org/pdf/1707.02894.pdf
 descr: Generate Soundness proofs, Completeness proofs, and Decision procedures for KAs plus a Sound, Complete and Decidable, client theory.
 ---
 
