--- a/resume.tex
+++ b/resume.tex
@@ -203,7 +203,7 @@ R \textbullet{} SQL \textbullet{} Java \textbullet{} bash \\
 \descript{Michael Greenberg, Ryan Beckett, and Eric Hayden Campbell}
 
 
-\location{Conditionally Accepted to PLDI|June 2022}
+\location{PLDI|June 2022}
 
 
 Generate Soundness proofs, Completeness proofs, and Decision procedures for KAs plus a Sound, Complete and Decidable, client theory.
