--- a/my-site/papers/2022-01-19-pi4.md
+++ b/my-site/papers/2022-01-19-pi4.md
@@ -4,6 +4,7 @@ authors: Matthias Eichholz, Eric Hayden Campbell, Matthias Krebs, Nate Foster,  
 venue: POPL
 month: January 2022 
 pdf: "pdfs/pi4.pdf"
+video: "images/pi4-popl.mp4"
 descr: "Develop a dependent refinement type system for P4 with a liquid-style Z3 backend to prohibit undefined behavior"
 --- 
 
