--- a/resume.tex
+++ b/resume.tex
@@ -200,7 +200,7 @@ R \textbullet{} SQL \textbullet{} Java \textbullet{} bash \\
 
 
 \runsubsection{Kleene Algebra Modulo Theories}
-\descript{Michael Greenberg, Ryan Beckett, and Eric Hayden Campbell}
+\descript{Michael Greenberg, Ryan Beckett, and <b>Eric Hayden Campbell</b>}
 
 
 \location{PLDI|June 2022}
@@ -212,7 +212,7 @@ Generate Soundness proofs, Completeness proofs, and Decision procedures for KAs 
 
 
 \runsubsection{Dependently-Typed Data Plane Programming}
-\descript{Matthias Eichholz, Eric Hayden Campbell, Matthias Krebs, Nate Foster,  Mira Mezini}
+\descript{Matthias Eichholz, <b>Eric Hayden Campbell</b>, Matthias Krebs, Nate Foster,  Mira Mezini}
 
 
 \location{POPL|January 2022}
@@ -224,10 +224,10 @@ Develop a dependent refinement type system for P4 with a liquid-style Z3 backend
 
 
 \runsubsection{Avenir: Managing Data Plane Heterogeneity via Control Plane Synthesis}
-\descript{Eric Hayden Campbell, William T. Hallahan, Priya Srikumar, Carmelo Cascone, Jed Liu, Vignesh Ramamurthy, Hossein Hojjat, Ruzica Piskac, Robert Soulé, J. Nathan Foster}
+\descript{<b>Eric Hayden Campbell</b>, William T. Hallahan, Priya Srikumar, Carmelo Cascone, Jed Liu, Vignesh Ramamurthy, Hossein Hojjat, Ruzica Piskac, Robert Soulé, J. Nathan Foster}
 
 
-\location{NSDI|April 2020}
+\location{NSDI|April 2021}
 
 
 Employ program synthesis to translate abstract switch operations into target switch operations
@@ -236,10 +236,10 @@ Employ program synthesis to translate abstract switch operations into target swi
 
 
 \runsubsection{Epistemic Semantics in Guarded String Models}
-\descript{Eric Hayden Campbell, Mats Rooth}
+\descript{<b>Eric Hayden Campbell</b>, Mats Rooth}
 
 
-\location{SCiL|February 2020}
+\location{SCiL|February 2021}
 
 
 Extend Kleene Algebra with Tests to model epistemic semantics of modal verbs in natural English
@@ -248,7 +248,7 @@ Extend Kleene Algebra with Tests to model epistemic semantics of modal verbs in 
 
 
 \runsubsection{How to Avoid Making a Billion-Dollar Mistake: Type-Safe Data Plane Programming with SafeP4}
-\descript{Matthias Eichholz, Eric Campbell, Nate Foster, Guido Salvaneschi, Mira Mezini}
+\descript{Matthias Eichholz, <b>Eric Hayden Campbell</b>, Nate Foster, Guido Salvaneschi, Mira Mezini}
 
 
 \location{ECOOP|July 2019}
@@ -259,11 +259,32 @@ Develop a Type System for P4 that prohibits references to invalid headers. Surve
 
 
 
+\runsubsection{Injecting Finiteness to Prove Completeness for Finite Linear Temporal Logic}
+\descript{<b>Eric Hayden Campbell</b>, Michael Greenberg}
+
+
+\location{arXiv:2107.06045}
+
+
+Proved Soundness, Completeness and Decidability for Finite-Trace Linear Temporal Logic. Developed a decision procedure for the logic. Proved the axiomatization equivalent to the temporal axioms in Temporal NetKAT, making a completeness proof possible for TNK.
+\sectionsep
+
+
+
+\runsubsection{Infiniteness and Linear Temporal Logic}
+\descript{<b>Eric Hayden Campbell</b>, advised by Michael Greenberg}
+
+
+\location{Pomona College|May 2017}
+
+
+Proved Soundness, Completeness and Decidability for Finite-Trace Linear Temporal Logic. Developed a decision procedure for the logic. Proved the axiomatization equivalent to the temporal axioms in Temporal NetKAT, making a completeness proof possible for TNK.
+\sectionsep
 
 
 
 \runsubsection{Constructing Integer Matrices with Integer Eigenvalues}
-\descript{Christopher Towse and Eric Campbell}
+\descript{Christopher Towse and <b>Eric Hayden Campbell</b>}
 
 
 \location{The Mathematical Scientist, UK|June 2016}
