--- a/resume.tex
+++ b/resume.tex
@@ -199,6 +199,18 @@ R \textbullet{} SQL \textbullet{} Java \textbullet{} bash \\
 \section{Selected Publications}
 
 
+\runsubsection{P4Cub: A Little Language for Big Routers}
+\descript{Rudy Peterson, <b>Eric Hayden Campbell</b>, John Chen, Natalie Isak, Calvin Shyu, Ryan Doenges, Parisa Ataei, and Nate Foster}
+
+
+\location{CPP|Jan 2023}
+
+
+P4Cub is a new intermediate representation (IR) for the P4 programming language that is designed to facilitate the development of certified tools.
+\sectionsep
+
+
+
 \runsubsection{Kleene Algebra Modulo Theories}
 \descript{Michael Greenberg, Ryan Beckett, and <b>Eric Hayden Campbell</b>}
 
