--- a/my-site/posts/2023-01-26-ttls.md
+++ b/my-site/posts/2023-01-26-ttls.md
@@ -93,7 +93,7 @@ exploration of `tracroute` obsolete in a deeply programmable SDN.
 Now we can update our thesis with a few caveats
 
 __The TTL field is obsolete in Verified, Deeply-Programmable, Software-Defined
-Networking (VDPSDN)_
+Networking (VDPSDN)__
 
 (*whew, good thing its still in the IEEE standard*)
 
