--- a/my-site/posts/2023-01-26-ttls.md
+++ b/my-site/posts/2023-01-26-ttls.md
@@ -71,7 +71,7 @@ subsumed by a fine-grained topological detector.
 ## An early counterexample: `traceroute`
 
 But of course I'm wrong. The `traceroute` tool is an essential debugging tool in
-the network engineers tool kit. `tracerout` well _traces_ the _route_ between
+the network engineers tool kit. `traceroute` well _traces_ the _route_ between
 one host and another. The way that it works is via the TTL field. It sends a
 collection of packets to the desired destination host with increasing TTLs.
 Then, when the TTL of each packet reaches 0, the current switch send an _ICMP
@@ -130,10 +130,10 @@ turn away from motivating their work with frivolous service level objectives
 like "uptime" or "availability", and instead motivate their work  on 
 
 
-> NB: This is satire. The "creativity" of these "logical" steps should only be
+> _NB: This is satire. The "creativity" of these "logical" steps should only be
 > taken in a lighthearted manner. Formal specifications are extremely hard to
 > get right and TTLs are very important as an additional line of defense when
-> they fail.
+> they fail_
 
 
 
