--- a/my-site/posts/2023-01-26-ttls.md
+++ b/my-site/posts/2023-01-26-ttls.md
@@ -9,7 +9,7 @@ These days, its rare to watch a network verification talk that _doesn't_ start
 with a cliche smattering of headlines describing "Facebook's Latest Network
 Outage", or "This One Crazy BGP Bug brought down Iran's National Network". This
 device is extremely powerful! It's effective at convincing skeptics that Network
-Reliability(TM) is not already solved, It doesn convince people that _formal
+Reliability(TM) is not already solved, It doesn't convince people that _formal
 methods_ are the right solution for network reliability.
 
 __Network Verification evangelists aren't thinking big enough__
@@ -17,8 +17,9 @@ __Network Verification evangelists aren't thinking big enough__
 Rather than focus on service level objectives like network reliability and
 availability, network engineers need to focus on the broad engineering goal of
 reducing packet size. The plain fact of the matter is that verification renders
-whole portions of the the IEEE standard obsolete and network operators should
-feel empowered to resuse those fields for other purposes!
+whole portions of the IEEE standard obsolete and network operators should feel
+empowered to reuse those fields for other purposes! It can even result in a 0.8%
+improvement in packet size efficiency!
 
 ## Étude pour l'anachronisme: Time to Live
 
@@ -53,7 +54,7 @@ reaches the same switch regardless of whether any field has changed. The TTL
 simply mitigates the effect of these loops by ensuring that the packet will not
 traverse such a loop forever. This certainly will not prevent the packet from
 becoming a so-called "Chernobyl packet". A _Chernobyl packet_ is one that
-triggers such an overaccumulation of broadcast and multicast traffic that
+triggers such an over-accumulation of broadcast and multicast traffic that
 switches and/or links begin to fail. Its perfectly feasible for such a traffic
 burst to occur before the TTL can be reduced to 0.
 
@@ -88,7 +89,7 @@ rules are computed in a logically centralized way, and can be easily logged and
 snooped on. The increasing popularity of dataplane programming languages like P4
 and denotational semantics (Petr4) let you statically compute and verify routes
 (_simulation fidelity not verified by the FDA_), rendering the dynamic
-exploration of `tracroute` obsolete in a deeply programmable SDN.
+exploration of `traceroute` obsolete in a deeply programmable SDN.
 
 Now we can update our thesis with a few caveats
 
@@ -129,14 +130,9 @@ realize operational gains in VDPSDNs. Network verification evangelists should
 turn away from motivating their work with frivolous service level objectives
 like "uptime" or "availability", and instead motivate their work  on 
 
+------
 
 > _NB: This is satire. The "creativity" of these "logical" steps should only be
 > taken in a lighthearted manner. Formal specifications are extremely hard to
 > get right and TTLs are very important as an additional line of defense when
 > they fail_
-
-
-
-
-
-
