--- a/my-site/posts/2023-01-26-ttls.md
+++ b/my-site/posts/2023-01-26-ttls.md
@@ -64,7 +64,7 @@ _desired behavior_, formal verification tools can permit the desired loops and
 prevent the undesired ones. We'll call such a tool a "fine-grained topological
 loop detector". This leads me to my first approximate thesis.
 
-__The TTL field is obsolete Verified Networking__
+__The TTL field is obsolete in Verified Networking__
 
 Specifically, I mean that the goals achieved by a the TTL field are fully
 subsumed by a fine-grained topological detector.
