--- a/my-site/posts/2023-02-27-tofino.md
+++ b/my-site/posts/2023-02-27-tofino.md
@@ -21,11 +21,11 @@ asserting Intel's deep committment to open source P4:
 
 > _Although Tofino’s roadmap is curtailed, I’d like to make clear that the team here at Intel remains committed to P4 as the language of choice across a wide range of Intel products and platforms, including our IPUs (ASIC and FPGA). The mission of Intel Network and Edge (NEX) group remains unchanged: we design and sell products to enable network owners to decide how packets are processed and to deploy their own creative new solutions. P4 is an essential part of our roadmap for IPUs, FPGAs, DPDK, IDPK, and more._
 
-_Intel remains committed to open source and we continue to contribute to, and support, the P4 community, including the design of the P4 language, standard architectures, control APIs, and applications. And we will continue to develop open-source targets like P4TC, which integrates P4 into the Linux kernel, bringing a new level of programmability to the network edge._
+> _Intel remains committed to open source and we continue to contribute to, and support, the P4 community, including the design of the P4 language, standard architectures, control APIs, and applications. And we will continue to develop open-source targets like P4TC, which integrates P4 into the Linux kernel, bringing a new level of programmability to the network edge._
 
-_Together, as a community, we can feel proud for successfully fostering a “revolution” in how industry and researchers think about networks. In the past, behaviors were baked into fixed function hardware; today, we can specify and program behaviors in software that are compiled and deployed in-situ, allowing beautiful new ideas to be tested and deployed more quickly. There is no going back._
+> _Together, as a community, we can feel proud for successfully fostering a “revolution” in how industry and researchers think about networks. In the past, behaviors were baked into fixed function hardware; today, we can specify and program behaviors in software that are compiled and deployed in-situ, allowing beautiful new ideas to be tested and deployed more quickly. There is no going back._
 
-_P4 got its start when a small group got together to think about new abstractions for programmable networking. We’ve now grown into a vibrant community of researchers and practitioners who are pushing the boundaries of what’s possible across the full range of programmable targets. I’m honored to be a part of this community and I’m inspired by what we’ve accomplished and excited about what we will achieve in the future._
+> _P4 got its start when a small group got together to think about new abstractions for programmable networking. We’ve now grown into a vibrant community of researchers and practitioners who are pushing the boundaries of what’s possible across the full range of programmable targets. I’m honored to be a part of this community and I’m inspired by what we’ve accomplished and excited about what we will achieve in the future._
 
 > _Sincerely,_
 > _Nick McKeown_
