--- a/my-site/cv.tex
+++ b/my-site/cv.tex
@@ -37,7 +37,7 @@
 \begin{tabular}{l l}
  Cornell University    & \hspace{1in} \href{mailto:ehc86@cornell.edu}{ehc86@cornell.edu} \\
  PhD Candidate, Department of Computer Science    & \hspace{1in}  \href{ericthewry.github.io}{www.ericthewry.github.io}   \\
- Gates Hall            & \\
+ 430 Gates Hall            & \\
  Ithaca, NY\hspace{.75em}14853, U.S.A. \\
 \end{tabular}
 \end{center}
@@ -51,42 +51,45 @@
 \begin{tabular}{@{} l l}
   \Large{Education} 
   & \textbf{Cornell University} \\
-  
   & Ph.D. in Computer Science, Expected May 2023 \\
-
-  
   & M.Sc. in Computer Science, December 2020 \\
-  
-
   & \textbf{Research Interests}: Network Verification, Program Synthesis, Semantics \\
-  & \\
+  & 2019 NSF GRFP Fellow \\
+  \\
 
 
   & \textbf{Pomona College} \\
-
   & B.A.s in Computer Science \& Mathematics, May 2017 \\
-
   & \textbf{Thesis:} Infiniteness and Linear Temporal Logic \\
   & \\
 
 
-    % & \textbf{International School of Amsterdam} \\
-
-    % & International Baccalaureate, Graduated May 2013 \\
-
-    % & Concentration in Mathematics \\
+  % & \textbf{International School of Amsterdam} \\
+  % & International Baccalaureate, Graduated May 2013 \\
+  % & Concentration in Mathematics \\
 
   \Large{Selected}
   & \textbf{Avenir: Managing Data Plane Heterogeneity via Control Plane Synthesis}\\
-  \Large{Publications}
+  \Large{Research}
   & Eric Hayden Campbell, Bill Hallahan, Priya Srikumar, Carmelo Cascone, Jed Liu, \\ & Vignesh Ramamurthy, Hossein Hojjat, Robert  Soul\'{e}, Ruzica Piskac,  and  Nate Foster\\
   & \textit{NSDI 2021} \\
   &\\
 
-  & \textbf{Control Plane Specification Inference} \\
-  & Eric Hayden Campbell, Eduardo Coelho de Lima, Hossein Hojjat, Minseok Kwon, Nate Foster \\
-  & \textit{In Submission to SIGCOMM 2022} \\
+  & \textbf{Weakest Inference of Control Plane Specifications} \\
+  & Eric Hayden Campbell, Hossein Hojjat Nate Foster \\
+  & \textit{In Review, PLDI 24} \\
   & \\
+
+  & \textbf{A Database-Theoretic Foundation for Networks} \\
+  & Eric Hayden Campbell, Christoph Koch, Nate Foster \\
+  & \textit{In Production} \\
+  & \\
+
+
+  & \textbf{Kleene Algebra Modulo Theories} \\
+  & Michael Greenberg, Ryan Beckett, and Eric Hayden Campbell \\
+  & \textit{PLDI 2022, Distinguished Paper Award} \\
+  &\\
 
   & \textbf{$\Pi4$: Dependently-Typed Data Plane Programming} \\
   & Matthias Eichholz, Eric Hayden Campbell, Matthias Krebs, Nate Foster, Mira Mezini \\
@@ -103,16 +106,13 @@
   & Research Intern, Property Inference for Legacy Networks \\
   & \textit{Sunnyvale, CA}. May 2018 - Aug 2018 \\
   & \\
-  & \textbf{Originate, Inc} \\
-  & Software Engineering Intern, Web Development \\
-  & \textit{San Francisco, CA}. May 2015 - Aug 2015 \\
-  & \\
-  & \textbf{Gladly, Inc} \\
-  & Software Engineering Intern, Web Development \\
-  & \textit{Palo Alto, CA}. May 2014 - Aug 2014 \\ \\
-  \Large{Awards}
-  & \textit{NSF Graduate Research Fellowship}, 2019. \\
-  & \textit{Cornell Teaching Excellence Award}, 2018.
+  % & \textbf{Originate, Inc} \\
+  % & Software Engineering Intern, Web Development \\
+  % & \textit{San Francisco, CA}. May 2015 - Aug 2015 \\
+  % & \\
+  % & \textbf{Gladly, Inc} \\
+  % & Software Engineering Intern, Web Development \\
+  % & \textit{Palo Alto, CA}. May 2014 - Aug 2014 \\ \\
 
 \end{tabular}
 
@@ -124,12 +124,6 @@
   & Eric Hayden Campbell and Mats Rooth \\
   & \textit{SCiL 2021} \\
   & \\
-
-  & \textbf{Kleene Algebra Modulo Theories} \\
-  & Michael Greenberg, Ryan Beckett, and Eric Hayden Campbell \\
-  & \textit{Conditionally Accepted, PLDI 2022} \\
-  & \textit{arXiv:1707.02894, Sept 2021} \\
-  &\\
 
   & \textbf{Injecting Finiteness to Prove Completeness for} \\
   & \textbf{Finite Linear Temporal Logic} \\
@@ -144,12 +138,13 @@
 
   \Large{Invited Talks}
   & \textbf{Avenir: Managing Data Plane Diversity with Control Plane Synthesis}: \\
-      % & \tabitem \textit{Tech Talk}. Intel. May 2022. \\
+      & \tabitem \textit{VLCS Seminar}. EPFL. Oct 23. \\
+      & \tabitem \textit{Tech Talk}. Intel. May 2022. \\
       & \tabitem \textit{Tech Talk}. Intel. March 2022. \\
       & \tabitem \textit{Computer Aided Verification}. P4 Verification Workshop. July 2021.\\
       & \tabitem \textit{Simons Institute}. Synthesis of Models and Systems. May 2021\\
       & \tabitem \textit{Networked Systems Design \& Implementation}. April 2021\\
-      & \tabitem \textit{Yale University}. Synthesis Discussion Group.  September 2020\\
+      & \tabitem \textit{Synthesis Discussion Group}. Yale University.  September 2020\\
       & \tabitem \textit{P4 Expert Roundtable Series}. How is P4 Evolving as a language?. April 2020\\
   % & \textbf{Computational Ethics: Responsibilities for Correctness} \\
   % & \textbullet \textit{Cornell University}. \textit{Guest Lecturer: Philosophy}. February 2019 \\
@@ -159,22 +154,25 @@
   & \\
 
   \Large{Outreach}
+  & \textbf{Jane Street AMP} \\
+  & Advanced CS Instructor \& Course Design, \emph{CS3}, 2022-2023 \\
+  \\
+
   & \textbf{4H Career Explorations Conference} \\
   & Workshop Designer \& Leader, \emph{Networking and Security}, 2018-2022 \\
   & \\
   & \textbf{Expand Your Horizons Conference} \\
   & Workshop Leader, \emph{Googling With Paper Airplanes}, 2017-2019 \\
   & \\
-  % & \textbf{Originate, Inc} \\
-  % & Counselor, \emph{How to Build A Webpage}, 2015 \\
-  % & \\
+  & \textbf{Originate, Inc} \\
+  & Counselor, \emph{Approachable Web Design}, 2015 \\
+  & \\
 
   \Large{Teaching}
   & \textbf{Computer Science Department, Cornell University} \\
   
-  & TA, Object Oriented Programming and Data Structures, Spring 2018 \\
-  
-  & TA, Object Oriented Programming and Data Structures, Fall 2017 \\
+  & TA, OOP and Data Structures, Spring 2018, \textit{Teaching Excellence Award} \\
+  & TA, OOP and Data Structures, Fall 2017 \\
   &\\
   
   & \textbf{Computer Science Department, Pomona College} \\
@@ -184,7 +182,8 @@
   & TA, Intro to CS, Fall 2015 \\
   &\\
 
-  \Large{Guest Lecturing}
+  \Large{Guest Lecturing} 
+  & \textbf{Responsible AI}. \textit{Holt School of Business}. June 2023\\
   & \textbf{SafeP4}. Network Programming. \textit{Cornell CS}. Oct 2019 \\
   & \textbf{Decidability of }\textsc{Kat}. Intro To Kleene Algebra. \textit{Cornell CS}. March 2019 \\
   & \textbf{Responsibilities for Correctness}. FWS: Ethics. \textit{Cornell Philosophy}. Feb 2019\\
