--- a/cv.tex
+++ b/cv.tex
@@ -37,7 +37,7 @@
 \begin{tabular}{l l}
  Cornell University    & \hspace{1in} \href{mailto:ehc86@cornell.edu}{ehc86@cornell.edu} \\
  PhD Candidate, Department of Computer Science    & \hspace{1in}  \href{ericthewry.github.io}{www.ericthewry.github.io}   \\
- Gates Hall            & \\
+ 430 Gates Hall            & \\
  Ithaca, NY\hspace{.75em}14853, U.S.A. \\
 \end{tabular}
 \end{center}
@@ -51,41 +51,44 @@
 \begin{tabular}{@{} l l}
   \Large{Education} 
   & \textbf{Cornell University} \\
-  
   & Ph.D. in Computer Science, Expected May 2023 \\
-
-  
   & M.Sc. in Computer Science, December 2020 \\
-  
-
   & \textbf{Research Interests}: Network Verification, Program Synthesis, Semantics \\
-  & \\
+  & 2019 NSF GRFP Fellow \\
+  \\
 
 
   & \textbf{Pomona College} \\
-
   & B.A.s in Computer Science \& Mathematics, May 2017 \\
-
   & \textbf{Thesis:} Infiniteness and Linear Temporal Logic \\
   & \\
 
 
-    % & \textbf{International School of Amsterdam} \\
-
-    % & International Baccalaureate, Graduated May 2013 \\
-
-    % & Concentration in Mathematics \\
+  % & \textbf{International School of Amsterdam} \\
+  % & International Baccalaureate, Graduated May 2013 \\
+  % & Concentration in Mathematics \\
 
   \Large{Selected}
   & \textbf{Avenir: Managing Data Plane Heterogeneity via Control Plane Synthesis}\\
-  \Large{Publications}
+  \Large{Research}
   & Eric Hayden Campbell, Bill Hallahan, Priya Srikumar, Carmelo Cascone, Jed Liu, \\ & Vignesh Ramamurthy, Hossein Hojjat, Robert  Soul\'{e}, Ruzica Piskac,  and  Nate Foster\\
   & \textit{NSDI 2021} \\
   &\\
 
-  & \textbf{Control Plane Specification Inference} \\
-  & Eric Hayden Campbell, Eduardo Coelho de Lima, Hossein Hojjat, Minseok Kwon, Nate Foster \\
-  & \textit{In Submission to SIGCOMM 2022} \\
+  & \textbf{Weakest Inference of Control Plane Specifications} \\
+  & Eric Hayden Campbell, Hossein Hojjat Nate Foster \\
+  & \textit{In Review, PLDI 24} \\
   & \\
+
+  & \textbf{A Database-Theoretic Foundation for Networks} \\
+  & Eric Hayden Campbell, Christoph Koch, Nate Foster \\
+  & \textit{In Production} \\
+  & \\
+
+
+  & \textbf{Kleene Algebra Modulo Theories} \\
+  & Michael Greenberg, Ryan Beckett, and Eric Hayden Campbell \\
+  & \textit{PLDI 2022, Distinguished Paper Award} \\
+  &\\
 
   & \textbf{
