--- a/resume.tex
+++ b/resume.tex
@@ -338,6 +338,8 @@ Developed a construction algorithm for Integer Matrices with Integer Eigenvalues
 
 \begin{tabular}{llll}
   
+    Summer 2023 & Instructor & CS 3 & Jane Street AMP \\
+  
     Summer 2022 & Instructor & CS 3 & Jane Street AMP \\
   
     Spring 2018 & TA & OOP and Data Structures & Cornell University \\
