--- a/my-site/cv.tex
+++ b/my-site/cv.tex
@@ -182,8 +182,8 @@
   & TA, Intro to CS, Fall 2015 \\
   &\\
 
-  \Large{Guest Lecturing} 
-  & \textbf{Responsible AI}. \textit{Holt School of Business}. June 2023\\
+  \Large{Guest Lectures}
+  & \textbf{Responsible AI}. Enrepreneurship: Growth Hacking. \textit{Hult International School of Business}. June 2023\\
   & \textbf{SafeP4}. Network Programming. \textit{Cornell CS}. Oct 2019 \\
   & \textbf{Decidability of }\textsc{Kat}. Intro To Kleene Algebra. \textit{Cornell CS}. March 2019 \\
   & \textbf{Responsibilities for Correctness}. FWS: Ethics. \textit{Cornell Philosophy}. Feb 2019\\
