--- a/cv.tex
+++ b/cv.tex
@@ -51,9 +51,9 @@
 \begin{tabular}{@{} l l}
   \Large{Education} 
   & \textbf{Cornell University} \\
-  & Ph.D. in Computer Science, Expected May 2023 \\
+  & Ph.D. in Programming Languages, Expected May 2023 \\
   & M.Sc. in Computer Science, December 2020 \\
-  & \textbf{Research Interests}: Network Verification, Program Synthesis, Semantics \\
+  & \textbf{Thesis Topic}: Formal Interface Design for Software Defined Networks \\
   & 2019 NSF GRFP Fellow \\
   \\
 
