--- a/my-site/cv.tex
+++ b/my-site/cv.tex
@@ -35,8 +35,8 @@
 
 \begin{center}
 \begin{tabular}{l l}
- Cornell University    & \hspace{1in} \href{mailto:ehc86@cornell.edu}{ehc86@cornell.edu} \\
- PhD Candidate, Department of Computer Science    & \hspace{1in}  \href{ericthewry.github.io}{www.ericthewry.github.io}   \\
+ PhD Candidate, Cornell University    & \hspace{1in} \href{mailto:ehc86@cornell.edu}{ehc86@cornell.edu} \\
+ Department of Computer Science    & \hspace{1in}  \href{ericthewry.github.io}{www.ericthewry.github.io}   \\
  430 Gates Hall            & \\
  Ithaca, NY\hspace{.75em}14853, U.S.A. \\
 \end{tabular}
@@ -52,9 +52,9 @@
   \Large{Education} 
   & \textbf{Cornell University} \\
   & Ph.D. in Programming Languages, Expected May 2023 \\
-  & M.Sc. in Computer Science, December 2020 \\
-  & \textbf{Thesis Topic}: Formal Interface Design for Software Defined Networks \\
-  & 2019 NSF GRFP Fellow \\
+  % & M.Sc. in Computer Science, December 2020 \\
+  & \textbf{Thesis Topic}: Formal Methods for Dataplane Programs \\
+  & \textit{2019 NSF GRFP Fellow} \\
   \\
 
 
@@ -68,23 +68,23 @@
   % & International Baccalaureate, Graduated May 2013 \\
   % & Concentration in Mathematics \\
 
-  \Large{Selected}
-  & \textbf{Avenir: Managing Data Plane Heterogeneity via Control Plane Synthesis}\\
-  \Large{Research}
-  & Eric Hayden Campbell, Bill Hallahan, Priya Srikumar, Carmelo Cascone, Jed Liu, \\ & Vignesh Ramamurthy, Hossein Hojjat, Robert  Soul\'{e}, Ruzica Piskac,  and  Nate Foster\\
-  & \textit{NSDI 2021} \\
-  &\\
-
+  \Large{Current Projects}
   & \textbf{Weakest Inference of Control Plane Specifications} \\
   & Eric Hayden Campbell, Hossein Hojjat Nate Foster \\
-  & \textit{In Review, PLDI 24} \\
+  % & \textit{In Review, PLDI 24} \\
   & \\
 
   & \textbf{A Database-Theoretic Foundation for Networks} \\
   & Eric Hayden Campbell, Christoph Koch, Nate Foster \\
-  & \textit{In Production} \\
+  % & \textit{In Submission} \\
   & \\
 
+  \Large{Refereed}
+  & \textbf{Avenir: Managing Data Plane Heterogeneity via Control Plane Synthesis}\\
+  \Large{Publications}
+  & Eric Hayden Campbell, Bill Hallahan, Priya Srikumar, Carmelo Cascone, Jed Liu, \\ & Vignesh Ramamurthy, Hossein Hojjat, Robert  Soul\'{e}, Ruzica Piskac,  and  Nate Foster\\
+  & \textit{NSDI 2021} \\
+  &\\
 
   & \textbf{Kleene Algebra Modulo Theories} \\
   & Michael Greenberg, Ryan Beckett, and Eric Hayden Campbell \\
@@ -100,41 +100,38 @@
   & Matthias Eichholz, Eric Hayden Campbell, Nate Foster, Guido Salvaneschi, Mira Mezini \\
   & \textit{ECOOP 2019} \\
   & \\
-
- \Large{Industry}
-  & \textbf{Fujitsu Laboratories of America} \\
-  & Research Intern, Property Inference for Legacy Networks \\
-  & \textit{Sunnyvale, CA}. May 2018 - Aug 2018 \\
-  & \\
-  % & \textbf{Originate, Inc} \\
-  % & Software Engineering Intern, Web Development \\
-  % & \textit{San Francisco, CA}. May 2015 - Aug 2015 \\
-  % & \\
-  % & \textbf{Gladly, Inc} \\
-  % & Software Engineering Intern, Web Development \\
-  % & \textit{Palo Alto, CA}. May 2014 - Aug 2014 \\ \\
-
-\end{tabular}
-
-\begin{tabular}{@{} l l }
-
-  \Large{Further}
   & \textbf{Epistemic Semantics in Guarded String Models}\\
-  \Large{Publications}
   & Eric Hayden Campbell and Mats Rooth \\
   & \textit{SCiL 2021} \\
   & \\
 
-  & \textbf{Injecting Finiteness to Prove Completeness for} \\
-  & \textbf{Finite Linear Temporal Logic} \\
-  & Eric Hayden Campbell and Michael Greenberg \\
-  & \textit{arXiv:2107.06045}, July 2021\\
-  &\\
+  % & \textbf{Injecting Finiteness to Prove Completeness for} \\
+  % & \textbf{Finite Linear Temporal Logic} \\
+  % & Eric Hayden Campbell and Michael Greenberg \\
+  % & \textit{arXiv:2107.06045}, July 2021\\
+  % &\\
 
   & \textbf{Constructing Integer Matrices with Integer Eigenvalues} \\
   & Christopher Towse and Eric Hayden Campbell \\
   & \textit{The Mathematical Scientist}, June 2016 \\
   & \\
+
+\end{tabular}
+
+\begin{tabular}{@{} l l }
+
+  \Large{Industry}
+  & \textbf{Fujitsu Laboratories of America} \\
+  & Research Intern, Property Inference for Legacy Networks \\
+  & \textit{Sunnyvale, CA}. May 2018 - Aug 2018 \\
+  & \\
+  & \textbf{Originate, Inc} \\
+  & Software Engineering Intern, Web Development \\
+  & \textit{San Francisco, CA}. May 2015 - Aug 2015 \\
+  & \\
+  & \textbf{Gladly, Inc} \\
+  & Software Engineering Intern, Web Development \\
+  & \textit{Palo Alto, CA}. May 2014 - Aug 2014 \\ \\
 
   \Large{Invited Talks}
   & \textbf{Avenir: Managing Data Plane Diversity with Control Plane Synthesis}: \\
