--- a/my-site/news/2023-10-18-epfl.md
+++ b/my-site/news/2023-10-18-epfl.md
@@ -1,3 +1,3 @@
 ---
-descr: Visited EPFL! Gave a talk about Avenir in Ed's group and worked with Christoph on some exciting new directions!
+descr: Visited EPFL! Gave a talk about Avenir in Ed's group
 ---
